--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">template</string>
 
+    <string name="home">Home</string>
+
+    <string name="setting">Settings</string>
+
     <string name="setting_about_this_app">このアプリについて</string>
     <string name="setting_app">アプリケーションプライバシーポリシー</string>
     <string name="setting_oss">オープンソースライセンス</string>
