[Update] EditText hint

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="main_fragment_label">Main Fragment</string>
     <string name="settings_fragment_label">Settings Fragment</string>
 
+    <string name="edit_text_hint">enter something</string>
     <string name="save">save</string>
     <string name="shuffle">shuffle</string>
 </resources>
